docker [sail] and documentation
