# app/Http/Controllers/V1/Auth/JWT/RefreshTokenController.php
@@ -11,6 +11,8 @@ use App\Http\Requests\RefreshTokenRequest;
 use App\Http\Resources\UserResource;
 use Exception;
 use Illuminate\Http\JsonResponse;
+use OpenApi\Annotations as OA;
+
 
 /**
  * RefreshToken
@@ -21,45 +23,38 @@ use Illuminate\Http\JsonResponse;
  *     summary="Refresh token",
  *     operationId="refreshToken",
  *     @OA\RequestBody(
- *     description="Refresh token",
- *     required=true,
- *     @OA\JsonContent(
- *     required={"email", "password"},
- *     @OA\Property(property="email", type="string", example="test@test.com"),
- *     @OA\Property(property="password", type="string", example="password"),
- *     ),
- *     ),
- *     @OA\Response(
- *     response=200,
- *     description="Success",
- *     @OA\JsonContent(
- *     @OA\Property(property="success", type="boolean", example=true),
- *     @OA\Property(property="type", type="string", example="refresh"),
- *     @OA\Property(property="token", type="string", example="eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9"),
- *     @OA\Property(property="user", type="object"),
- *     ),
+ *         description="Refresh token",
+ *         required=true,
+ *         @OA\JsonContent(
+ *             required={"email", "password"},
+ *             @OA\Property(property="email", type="string", example="test@test.com"),
+ *             @OA\Property(property="password", type="string", example="password"),
+ *         ),
  *     ),
  *     @OA\Response(
- *     response=401,
- *     description="Unauthorized",
- *     @OA\JsonContent(
- *     @OA\Property(property="message", type="string", example="User is not authorized"),
- *     ),
+ *         response=200,
+ *         description="Success",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="status", type="boolean", example=true),
+ *             @OA\Property(property="type", type="string", example="refresh"),
+ *             @OA\Property(property="token", type="string", example="eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9"),
+ *             @OA\Property(property="user", type="object", ref="#/components/schemas/UserResource"),
+ *         ),
  *     ),
  *     @OA\Response(
- *     response=422,
- *     description="Unprocessable Entity",
- *     @OA\JsonContent(
- *     @OA\Property(property="message", type="string", example="The given data was invalid."),
- *     @OA\Property(property="errors", type="object"),
- *     ),
+ *         response=422,
+ *         description="Unprocessable Entity",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="status", type="boolean", example=false),
+ *             @OA\Property(property="errors", type="object"),
+ *         ),
  *     ),
  *     security={
- *     {"bearerAuth": {}}
+ *         {"bearerAuth": {}}
  *     }
- *     )
- *
+ * )
  */
+
 class RefreshTokenController extends Controller
 {
     /**
