# storage/api-docs/api-docs.json
@@ -46,7 +46,7 @@
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "success": {
+                                        "status": {
                                             "type": "boolean",
                                             "example": true
                                         },
@@ -59,23 +59,7 @@
                                             "example": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9"
                                         },
                                         "user": {
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "User is not authorized"
+                                            "$ref": "#/components/schemas/UserResource"
                                         }
                                     },
                                     "type": "object"
@@ -89,9 +73,9 @@
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "The given data was invalid."
+                                        "status": {
+                                            "type": "boolean",
+                                            "example": false
                                         },
                                         "errors": {
                                             "type": "object"
@@ -108,6 +92,121 @@
                         "bearerAuth": []
                     }
                 ]
+            }
+        }
+    },
+    "components": {
+        "schemas": {
+            "SmsStatus": {
+                "title": "SmsStatus",
+                "description": "Sms status",
+                "properties": {
+                    "WAITING": {
+                        "type": "integer",
+                        "example": 0
+                    },
+                    "SENT": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "FAILED": {
+                        "type": "integer",
+                        "example": 2
+                    }
+                },
+                "type": "string",
+                "enum": [
+                    "WAITING",
+                    "SENT",
+                    "FAILED"
+                ]
+            },
+            "UserResource": {
+                "title": "UserResource",
+                "description": "User resource",
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "name": {
+                        "type": "string",
+                        "example": "John Doe"
+                    },
+                    "email": {
+                        "type": "string",
+                        "example": "test@test.com"
+                    }
+                },
+                "type": "object"
+            },
+            "SMS": {
+                "title": "SMS",
+                "description": "SMS model",
+                "properties": {
+                    "id": {
+                        "description": "SMS ID",
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "user_id": {
+                        "description": "User ID",
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "number": {
+                        "description": "SMS number",
+                        "type": "string",
+                        "example": "905555555555"
+                    },
+                    "message": {
+                        "description": "SMS message",
+                        "type": "string",
+                        "example": "Hello world"
+                    },
+                    "send_time": {
+                        "description": "SMS send time",
+                        "type": "string",
+                        "example": "2021-01-01 00:00:00"
+                    },
+                    "status": {
+                        "$ref": "#/components/schemas/SmsStatus"
+                    }
+                },
+                "type": "object"
+            },
+            "User": {
+                "title": "User",
+                "description": "User model",
+                "properties": {
+                    "id": {
+                        "description": "User ID",
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "name": {
+                        "description": "User name",
+                        "type": "string",
+                        "example": "John Doe"
+                    },
+                    "email": {
+                        "description": "User email",
+                        "type": "string",
+                        "format": "email",
+                        "example": "test@test.com"
+                    },
+                    "created_at": {
+                        "description": "User created at",
+                        "type": "string",
+                        "example": "2021-01-01 00:00:00"
+                    },
+                    "updated_at": {
+                        "description": "User updated at",
+                        "type": "string",
+                        "example": "2021-01-01 00:00:00"
+                    }
+                },
+                "type": "object"
             }
         }
     }
